Chat improvements + fix keyboard close on iOS

--- a/project/src/styl/chat.styl
+++ b/project/src/styl/chat.styl
@@ -19,8 +19,8 @@
   font-family 'montserratlight'
   margin-top 20px
   border-radius 8px
-  font-size 14px
-  line-height 24px
+  font-size 0.9em
+  line-height 1.2em
   color #767676
   width 90%
   &.me_talking
@@ -68,7 +68,7 @@
   font-family 'montserratregular'
   color #C3C3C3
   font-size 14px
-  
+
 .chat_send
   position absolute
   top 0
